--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "js-cookie": "^3.0.1",
     "ol": "^6.14.1",
     "ol-ext": "^3.2.27",
+    "proj4": "^2.8.0",
     "query-string": "^7.1.1",
+    "socket.io-client": "^4.5.2",
     "vue": "^2.6.14",
     "vue-multipane": "^0.9.5",
     "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10",
     "vue-split-panel": "^1.0.4",
     "vuetify": "^2.6.0",
     "vuex": "3.0",
