--- a/frontend/public/static/app-conf.json
+++ b/frontend/public/static/app-conf.json
@@ -46,184 +46,21 @@
         "group": "base_map",
         "serverType": "geoserver",
         "zIndex": 1,
-        "editGeometry": "Point",
-        "editDataType": "GeoJSON"
+        "title": "OSM",
+        "baseLayer": true,
+        "opacity": 1,
+        "visible": true
       },
       {
-        "type": "VECTOR",
-        "name": "geo_diemNVDH",
-        "group": "QTNVDH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": true,
-        "displayInLayerList": true,
-        "editGeometry": "Point",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
+        "name": "geo_base",
+        "type": "Stamen",
+        "group": "base_map",
+        "serverType": "geoserver",
         "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_tuyenNVDH",
-        "group": "QTNVDH",
+        "title": "Stamen",
+        "baseLayer": true,
         "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": true,
-        "displayInLayerList": true,
-        "editGeometry": "LineString",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_vungNVDH",
-        "group": "QTNVDH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": true,
-        "displayInLayerList": true,
-        "editGeometry": "Polygon",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_pheDuyetPhuongAnViTri",
-        "group": "GSDH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": true,
-        "displayInLayerList": true,
-        "editGeometry": "Point",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_pheDuyetPhuongAnTuyen",
-        "group": "GSDH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": true,
-        "displayInLayerList": true,
-        "editGeometry": "LineString",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_pheDuyetPhuongAnVung",
-        "group": "GSDH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": true,
-        "displayInLayerList": true,
-        "editGeometry": "Polygon",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_nhiemVuBoPhan",
-        "group": "STKH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": false,
-        "displayInLayerList": true,
-        "editGeometry": null,
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_diemPAVT",
-        "group": "STKH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": false,
-        "displayInLayerList": true,
-        "editGeometry": "Point",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_tuyenPAVT",
-        "group": "STKH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": false,
-        "displayInLayerList": true,
-        "editGeometry": "LineString",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_vungPAVT",
-        "group": "STKH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": false,
-        "displayInLayerList": true,
-        "editGeometry": "Polygon",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
-      },
-      {
-        "type": "VECTOR",
-        "name": "geo_TongThePhuongAn",
-        "group": "STKH",
-        "opacity": 1,
-        "maxZoom": 19,
-        "queryable": true,
-        "visible": true,
-        "canEdit": false,
-        "displayInLayerList": true,
-        "editGeometry": "",
-        "editDataType": "GeoJSON",
-        "format": "GeoJSON",
-        "zIndex": 1,
-        "serverType": "geoserver"
+        "visible": false
       }
     ],
     "modules": {
